cluster/apps/monitoring/kube-prometheus-stack/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kps-grafana-ingress
  namespace: default
spec:
  rules:
    - host: "kps-grafana.capricorn.brendonmccool.com"  # Your hostname
      http:
        paths:
        # Path-based routing settings:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kube-prometheus-stack-grafana  # The name of the service
                port:
                  number: 80  # Service Portnumber
